src_old/objects/Equipment__c.object
<CustomObject>
    <description>Equipment defines a piece of equipment that could either be an asset or tool. Equipment is related to Project Service Equipment and Retailer Service Equipment.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>An entry field that describes the Equipment.</description>
        <inlineHelpText>Enter a description of the equipment.</inlineHelpText>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentType__c</fullName>
        <description>A picklist that indicates the type of Equipment.</description>
        <inlineHelpText>Choose the type of equipment.</inlineHelpText>
        <label>Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates if this Equipment is active</description>
        <inlineHelpText>Select this box if this equipment is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToolIconClass__c</fullName>
        <label>Tool Icon Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EquipmentType__c</columns>
        <columns>IsActive__c</columns>
        <columns>ToolIconClass__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>